tests/sksl/errors/golden/SwizzleConstantOutput.glsl
### Compilation failed:

error: 1: cannot assign to this expression
1 error
